# reservation-svc

./: .env  .gitmodules  .tokeignore  Cargo.toml  README.md  build.rs
abi/: Cargo.toml  README.md  build.rs
abi/src/: lib.rs
abi/src/pb/: reservation.rs
migrations/: 20250514161423_create_reservations.down.sql  20250514161423_create_reservations.up.sql  20250515113915_init.down.sql  20250515113915_init.up.sql  20250515114904_reservation.down.sql  20250515114904_reservation.up.sql  20250515115311_reservation_update_trigger.down.sql  20250515115311_reservation_update_trigger.up.sql  20250515120001_reservation_query_function.down.sql  20250515120001_reservation_query_function.up.sql
reservation/: Cargo.toml
reservation/.sqlx/: query-72f1b4fc516b353bf82a1922914bbf4759e65527090d4d5365dc8608d0f70221.json
reservation/src/: convert.rs  db.rs  error.rs  lib.rs
src/pb/: reservation.rs
