[package]
name = "reservation-svc"
version = "0.1.0"
edition = "2024"

# [workspace]

[dependencies]
async-trait = "0.1.88"
prost = "0.13.5"
prost-types = "0.13.5"
sqlx = { version = "0.8.5", features = ["chrono", "postgres", "runtime-tokio-rustls", "uuid"] }
tonic = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"
