[package]
name = "abi"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
prost = "0.13.5"
prost-types = "0.13.5"
tonic = "0.13.1"
sqlx = { version = "0.8.5", features = ["postgres", "chrono", "uuid"] }

[build-dependencies]
tonic-build = "0.13.1"
